Fixing css and visibility of empty data

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
 }
 .data-class{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
